samples/_failures_safe/1761394352_c7092c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cdacaad.c: In function ‘main’:
./samples/SAFE/__tmp_8cdacaad.c:148:13: error: expected declaration or statement at end of input
  148 |             while (getchar() != '\n');
      |             ^~~~~
./samples/SAFE/__tmp_8cdacaad.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8cdacaad.c:148:13: error: expected declaration or statement at end of input
